--- a/config/tmux/.tmux.conf
+++ b/config/tmux/.tmux.conf
@@ -4,8 +4,8 @@ bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 # Shift arrow to switch windows
-bind -n C-J previous-window
-bind -n C-K next-window
+bind -n S-LEFT previous-window
+bind -n S-RIGHT next-window
 # scrollback buffer size increase
 set -g history-limit 100000
 # change window order
