--- a/config/tmux/.tmux.conf
+++ b/config/tmux/.tmux.conf
@@ -1,16 +1,22 @@
 # Use Alt-arrow keys without prefix key to switch panes
-bind -n M-Left select-pane -L
-bind -n M-Right select-pane -R
-bind -n M-Up select-pane -U
-bind -n M-Down select-pane -D
+bind -n M-LEFT select-pane -L
+bind -n M-RIGHT select-pane -R
+bind -n M-UP select-pane -U
+bind -n M-DOWN select-pane -D
+
+bind -n M-l select-pane -L
+bind -n M-h select-pane -R
+bind -n M-k select-pane -U
+bind -n M-j select-pane -D
+
 # Shift arrow to switch windows
 bind -n S-LEFT previous-window
 bind -n S-RIGHT next-window
 # scrollback buffer size increase
 set -g history-limit 100000
 # change window order
-bind-key -n C-S-Left swap-window -t -1
-bind-key -n C-S-Right swap-window -t +1
+bind-key -n C-S-Left swap-window -t -1\; previous-window
+bind-key -n C-S-Right swap-window -t +1\; next-window
 # disable window name auto change
 set-option -g allow-rename off
 # bar color
