--- a/config/tmux/.tmux.conf
+++ b/config/tmux/.tmux.conf
@@ -1,12 +1,14 @@
 unbind l
 unbind h
-unbind k
-unbind j
-bind l select-pane -L
-bind h select-pane -R
-bind k select-pane -U
-bind j select-pane -D
+#unbind k
+#unbind j
+#bind l select-pane -L
+#bind h select-pane -R
+#bind k select-pane -U
+#bind j select-pane -D
 
+bind h previous-window
+bind l next-window
 # Shift arrow to switch windows
 bind -n S-LEFT previous-window
 bind -n S-RIGHT next-window
