--- a/config/tmux/.tmux.conf
+++ b/config/tmux/.tmux.conf
@@ -20,6 +20,10 @@ bind -r TAB next-window
 # scrollback buffer size increase
 set -g history-limit 100000
 
+# change window base index
+set -g base-index 1
+setw -g pane-base-index 1
+
 # change window order
 # disable window name auto change
 set-option -g allow-rename off
