--- a/config/tmux/.tmux.conf
+++ b/config/tmux/.tmux.conf
@@ -4,13 +4,13 @@ unbind l
 unbind h
 unbind k
 unbind j
-bind l select-pane -L
-bind h select-pane -R
-bind k select-pane -U
-bind j select-pane -D
+#bind l select-pane -L
+#bind h select-pane -R
+#bind k select-pane -U
+#bind j select-pane -D
 
-#bind h previous-window
-#bind l next-window
+bind h previous-window
+bind l next-window
 # Shift arrow to switch windows
 bind -n S-LEFT previous-window
 bind -n S-RIGHT next-window
@@ -19,6 +19,7 @@ bind -n C-S-Right swap-window -t +1\; next-window
 
 bind -r BTAB previous-window
 bind -r TAB next-window
+
 # scrollback buffer size increase
 set -g history-limit 100000
 
@@ -37,3 +38,4 @@ bind T run 'zsh -c "arr=( off top ) && tmux setw pane-border-status \${arr[\$(( 
 # rename pane
 bind t command-prompt -p "(rename-pane)" -I "#T" "select-pane -T '%%'"
 set -g default-terminal "xterm-256color"
+set -sg escape-time 0
