--- a/config/tmux/.tmux.conf
+++ b/config/tmux/.tmux.conf
@@ -1,4 +1,5 @@
 set-option -g prefix C-b
+
 bind-key C-b send-prefix
 unbind l
 unbind h
@@ -11,6 +12,7 @@ unbind j
 
 bind h previous-window
 bind l next-window
+
 # Shift arrow to switch windows
 bind -n S-LEFT previous-window
 bind -n S-RIGHT next-window
@@ -34,8 +36,8 @@ set-option -g allow-rename off
 #set -g status-bg black
 set -g status-fg black
 # toggle pane title visibility
-bind T run 'zsh -c "arr=( off top ) && tmux setw pane-border-status \${arr[\$(( \${arr[(I)#{pane-border-status}]} % 2 + 1 ))]}"'
 # rename pane
 bind t command-prompt -p "(rename-pane)" -I "#T" "select-pane -T '%%'"
-set -g default-terminal "xterm-256color"
+set-option -g default-terminal "tmux-256color"
 set -sg escape-time 0
+set -s set-clipboard on
